Bug 312941.  Caret move events not reported for XUL textboxes. r=parente, sr=neil